added title and author

--- a/book.tex
+++ b/book.tex
@@ -1,9 +1,14 @@
 \documentclass[10pt,twoside,BCOR=12mm,DIV=classic]{scrbook}
+\usepackage[ngerman]{babel}
+\usepackage[latin1]{inputenc}
+\usepackage[T1]{fontenc}
 
 \begin{document}
-\title{Titel}
-\author{Markus Kohm}
+\title{Eine Sammlung von Schriften und Gebeten}
+\author{Bruder Maritius von Pratanberg\\Leitender Scriptor im Orden von Schwert und Kelch}
+\date{im Jahre des Herren 533}
+
 \maketitle
 \tableofcontents
-\chapter{Ok}
+\chapter{Die Geburt des Lichts I}
 \end{document}
