add Geburt des Lichts I

--- a/book.tex
+++ b/book.tex
@@ -1,7 +1,7 @@
 \documentclass[10pt,twoside,BCOR=12mm,DIV=classic]{scrbook}
 \usepackage[ngerman]{babel}
-\usepackage[latin1]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
 
 \begin{document}
 \title{Eine Sammlung von Schriften und Gebeten}
@@ -10,5 +10,191 @@
 
 \maketitle
 \tableofcontents
+
 \chapter{Die Geburt des Lichts I}
+"Ein Herz das die Liebe fand rief mich, um all jene aus der Finsternis zu führen,
+die bereit waren zu sehen"
+- Sheenallasaar, in der Ersten Feste, 12 Jahre vor dem Armageddon
+
+Dies ist die Geschichte eines Sterblichen, der in der Dunkelheit geboren wurde
+und in Finsternis herrschte. Die Geschichte eines Sterblichen der entdeckte, was
+es bedeutet zu sehen. Die Geschichte eines Sterblichen, der bereit war sein
+Herz zu öffnen, um Ordnung ins Chaos zu bringen und um die Bedeutung des
+Lebens erkennen zu können. Dies ist die Geschichte meines Vaters Nandur, aus
+den Ebenen von Aquillon. Und so berichtete er mir von der Zeit seiner
+Herrschaft in der Finsternis.
+- Aitharos der Sohn des Nandur
+
+"Eine Schlacht mehr ist geschlagen, die Letzten meines eigenen Blutes
+vernichtet. Nun bin ich der Herrscher des Seelenthrons Barghaans. Voll Stolz
+und Macht sollte mein Herz sein, doch fühle ich mich leer und all meiner Ziele
+beraubt. Mit Sicherheit wird bald ein Anderer meinen Platz einnehmen und von
+neuem das Land in Krieg und Chaos stürzen so wie es seit Anbeginn der Zeit war,
+denn nur der Stärkste unter den Kindern Barghaans kann über sie herrschen!" Dies
+waren die Worte die mein Vater einst sprach, bevor er im Licht des Ausmaßes
+seiner Fehler gewahr wurde.
+
+"Doch was geschieht mit mir? Voll Stärke und grausamer Erwartung sollte ich mich
+darauf freuen, den Nächsten zu empfangen und ihn in tausend Teile zu
+zerschmettern, denn nur so wird der Ruhm unseres Schöpfers hinausgetragen in die
+Weiten der Welt, um einen jeden anzustacheln sich am ewigen Chaos zu Ehren
+unseres Herrn zu beteiligen. Immer schrecklicher und finsterer werden die
+Kämpfe! Brüder gegen Schwestern, Söhne gegen Mütter? Allein was für ein Wert hat
+das Streben nach dem Thron absoluter Macht, wenn es nie von Dauer ist?
+Soll dies alles sein wofür wir leben?
+Nein! Nein! Nein!"
+
+Und so begann alles. In diesem Augenblick erkannte Nandur.Und er sagte einst zu
+mir es wäre gewesen, als sei sein Gesicht mit kaltem Wasser benetzt worden, doch
+an keiner anderen Stelle seines Körpers fühlte er diesen warmen Regen. Dies war
+das erste Mal in seinem Leben, dass er erkannte, zu welch vielseitigen Gefühlen
+wir Sterblichen fähig sind. Trauer. Trauer, um all jene, welche durch seine Hand
+getötet wurden, Trauer um die vergangene Zeit, zu der er noch als kleines Kind
+in den Armen seiner Mutter lag und noch nichts wusste von all dem Morden und
+Vernichten das ihn Barghaans Glauben lehrte. Trauer, als er auf den erschlagenen
+Körper seiner Mutter zu seinen Füßen hinab blickte, die er selbst zuvor vom
+Seelenthron gestoßen hatte.
+Und mit jedem Herzschlag sehnte er sich mehr danach, zuerfahren, was dies wohl
+für ein Gefühl war, als er noch in ihren Armen lag, und von ihr in den Schlaf
+gewiegt wurde.
+
+Verzweifelt und unsicher, überrannt von der Flut dieser Gefühle erhob er sich
+vom Thron der Finsternis, streckte seine Hände empor und öffnete die Pforten
+seines Herzens um die Frage seiner Existenz Barghaans selbst entgegen zu
+schleudern: "Gib mir einen Namen für die Gefühle, die tief in mir verborgen
+sind! Sag mir, was mein Herz so sehr beengt und begehrt zugleich. Sag mir, warum
+meine brennenden Augen meine Haut mit warmem, salzigem Blut benetzen? Warum
+Blut? Warum verlangst du all dieses Morden und die ewige Vernichtung von uns?"
+
+Wissend, das diese ketzerischen Worte mit Sicherheit die ewige Verdammnis
+bedeuteten, wartete Nandur auf die vernichtende Antwort des Dijai'dan, des
+ersten Sohnes Barghaans. Weit riss er seine Augen auf, um die Dunkelheit zu
+durchdringen. Um sehen zu können. Und mein Vater wuste nicht woher dieses Wort
+karm, noch verstand er sie. Denn er wuste nicht, was es bedeutet zu sehen, noch
+wuste er das noch etwas anderes existiert als die Finsternis.
+
+"Auf einmal durchdrangen meinen Kopf Schmerzen ungeahnter Stärke. Laut schrie
+ich auf und war bereit zu sterben. Meine Augen schienen sich in meinen Schädel
+zu bohren und doch lebte ich noch! Ich war geblendet von einem Gleißen. Licht,
+wie es noch nie zuvor in der Finsternis zu sehen gewesen war, schien auf mich
+hinab und erfüllte meinen Verstand mit tausenden von Worten. Worten, die noch
+keinen Sinn für mich ergaben. Doch als ich bereits glaubte, dass mich dieses
+Licht zu verbrennen schien, bildete sich aus den vielen eine klare Stimme und
+sprach laut zu mir. Und mit jedem Wort, dass in meinem Geist erschallte,
+schienen sich meine Augen Stück für Stück zu öffnen." Dies waren die Worte, mit
+denen Nandur später von der Offenbarung des Herren berichtete.
+
+Und der Herr sprach, und für einen Augendblick verstummte die Welt um ihm zu
+lauschen: "Nandur, Kind Barghaans, du gabst mir die Möglichkeit, in das Chaos
+und die Dunkelheit die Dich und Dein Volk umgibt einzugreifen. Wisse das mein
+Name is Bahamuth ist, Sohn Yols und Bruder deines Schöpfers. Seit Äonen
+betrachte ich seine Schöpfung ohne Hoffnung in ihr zu sehen. Doch jetzt gabst du
+mir die Möglichkeit, Deinem Geschlecht den Weg des Lichts zu eröffnen. Ich
+setzte Euch einst den Samen des Lichts in Eure Herzen und wartete darauf, dass
+eines Tages ein Sterblicher, nur ein einziger, den Samen in sich finden würde.
+Fast schon hatte ich jegliche Hoffnung verloren, doch dann warst du es, der mich
+als erster rief. Du bist derjenige, der Licht und Schatten gleichermaßen in sich
+trägt. Du, der Grausamste unter den Kinder Barghaans, hast die Finsternis in
+Deinem Herzen besiegt und mich gerufen. So werde ich Dir einen Weg zeigen. Einen
+Weg aus der Finsternis ins Licht."
+
+Und als das letzte Wort in seinem Kopf verhallt war, öffnete er seine Augen ganz
+und sah den Drachen aus Platin, dessen Augen zwei goldenen Sonnen glichen. In
+diesem Augenblick erhob sich der Körper meines Vaters wie von selbst, und
+Bahamuth sprach erneut zu ihm während er dem Licht entgegenschwebte.
+
+"Nie wieder sollst Du knien vor der Finsternis. Nie wieder sollst Du Dich
+verbeugen müssen, vor den Geißeln des Lebens!
+Nichts als die fünf großen Tugenden des Lichts sollst Du ehren:
+Stärke und Geist,
+Frieden und Gerechtigkeit,
+Liebe und Großmut,
+Ordnung uns Weisheit,
+Leben und Wahrheit.
+Jene sollst Du ergründen und diejenigen darüber lehren, die zum Lichte wollen,
+so wie Du es willst. Genauso ermahne ich Dich, diese Lehren niemals mit Gewalt
+zu verbreiten, aber wenn es sein muss dafür zu sterben. Denn selbst wenn Dich
+der Feind niederstreckt, schenke ihm die Gnade Deines wissenden Herzens."
+
+Und mit diesen Worten gab Bahamuth eines seiner goldenen Augen um für immerdar
+die Welt in Licht zu tauchen, so dass es einem jeden ein Zeichen sein sollte,
+ein Symbol der Hoffnung. Von diesem Tag an zog es über den Himmel, geschaffen
+aus dem Leibe und Atem Bahamuths, seine Bahnen ziehend, für alle Zeiten verfolgt
+und beneidet von der Dunkelheit. So zeigte er seinem dunklen Bruder auf ewig,
+was für Grausamkeiten sich in der Dunkelheit verbargen. Und ein drittes und
+letztes Mal sprach der Herr des Lichtes:
+
+"Dein Lehrer soll meine Tochter sein. Sheenallasaar, Tochter des Lichts und des
+Lebens, Herrin der Kinder der Lüfte und Behüterin der Eleevaar, den Kindern des
+Lebens."
+
+Kaum waren die Worte Nandurs wahrgewordenen Verlangens nach Wahrheit und Wissen
+verhallt, da sah er eine Gestalt unter den mächtigen Schwingen Bahamuths
+hervortreten. Sheenallasaar, Schönheit und Reinheit in ihrer ursprünglichsten
+Form. Groß und majestätisch, sanft und zärtlich, stark und zugleich voller
+Weichheit war ihre Gestalt. Augen, die ihn voll unverdorbenem Leben und
+unendlichem Wissen ansahen, erfüllt von Gefühlen, die mNandur bis zu diesem
+Augenblick noch völlig fremd gewesen waren. er glaubte, sein Herz müsse
+zerspringen, zerreißen und vergehen, gegenüber dieser unendlichen Fülle von
+Empfindungen.
+
+Emporgehoben von all diesen Gefühlen und neuen Erfahrungen blickte Nandur hinab
+vom Seelenthron und all das Grauen welches sein Blick erfasste raubte ihm den
+Atem. Tausend Fuß hoch stand er auf einem gigantischen Berg, geschaffen aus den
+Leibern unzähliger Opfer. Alles Opfer der gewaltigen Schlacht um den Thron der
+Finsternis.
+
+Getötet lagen sie danieder. Getötet seine Mutter. Getötet sein Vater. Getötet
+all seine Geschwister. Getötet von seiner Hand. Getötet von seinem unendlichen
+Streben nach Macht.
+Das erste Mal in seinem Leben erblickte er die Gesichter all derer, die er
+erschlagen hatte und eine schier unüberwindliche Welle der Trauer und
+Verzweiflung überkam ihn. Denn er spürte den Verlust von Liebe. Liebe die er nie
+würde zeigen können, die ihm für immer verwehrt sein würde.
+Mit Tränen in den Augen stand Nandur auf dem Berg des Wahnsinns und des
+unendlichen, alles verachtenden Hasses.
+
+Er wollte mein Schwert ergreifen um sich selbst zu entleiben. Doch in jenem
+Augenblick als der Schmerz um all die Verlorenen ihn zu überwältigen drohte,
+berührte ihn eine Hand. Und es schien ihm, als würde sie sein Innerstes tröstend
+umfassen und seinem Herz die Kraft geben weiter zu schlagen trotz all der Schuld
+die auf ihm lastete. Langsam drehte er sich um und wurde gefangen genommen von
+den unendlichen Augen Sheenallasaars. Und Nandur sprach: "Lass mich in die
+Dunkelheit gehen, wohin ich gehöre. Zurück an den Ort der Buße, bis in alle
+Ewigkeiten."
+
+"Nein, Nandur, Goldener, der Du geblickt hast in die Augen Bahamuths. Gehe
+nicht! Durch Dich habe ich erfahren, was Trauer ist. Und erst diese Trauer zeigt
+mir, wie wertvoll die Liebe ist, was für ein Geschenk in dem Gefühl der Hoffnung
+liegt. Du zeigst mir das Besondere in dem für mich Allgegenwärtigen und
+Natürlichen. Erst jetzt verstehe ich, wie viel ich von den Sterblichen lernen
+kann. Trotze der Dunkelheit die Dein Herz ergriffen hat! Öffne die Tore Deiner
+Seele und erschaffe Dein eigenes Licht! Ein Licht aus dem Stärke und Geist,
+Frieden und Gerechtigkeit, Liebe und Großmut, Ordnung uns Weisheit, Leben und
+Wahrheit hervortreten werden, um Dir und den Deinen den Weg des Lichts zu
+weisen. Ein jedes Wesen birgt eine Stärke, egal wie schwach sie auch sein mag,
+welche du jedoch nie erreichen kannst."
+
+Und gemeinsam stiegen wsie hinab vom Cullam Toroll, geschaffen aus den Leichen
+der Kinder Barghaans, einzig und allein zu Ehren der Finsternis. Dies war der
+Augenblick, in dem mein Vater das erste Mal sah, wie das schönste und
+wundervollste aller Wesen weinte. So nahm er sie in seine Arme und schöpfte
+Kraft aus ihrer Wärme und gab zugleich seine Liebe und Stärke um sie zu schützen
+vor dem endlosen Wehklagen der tausenden und abertausenden dahin geschlachteter
+Seelen.
+Bahamuth erkannte die Pein, welche sie zu ergreifen und hinab zu ziehen drohte,
+und so vollbrachte er ein weiteres Wunder, ein drittes Zeichen seiner
+unendlichen Barmherzigkeit. Der gesamte Berg erstrahlte im gleißenden Licht der
+Reinheit Bahamuths und die Leiber wurden zu Stein und ein Weg formte sich vor
+unseren Füßen, so dass sie hinab steigen konnten.
+
+Vieles lernten sie von einander als sie hinab stiegen in die einst finstere Welt
+auf der Suche nach Menschen und Geschöpfen, die sich ebenfalls nach dem Geschenk
+des Lichts sehnten. Kein Tier versuchte sie anzugreifen, viel zu sehr waren sie
+fasziniert von der Gestalt der Sheenallasaar. So kam es, dass die ersten Wesen,
+die die Schönheit des Lichts erblickten, die Tiere waren. Denn von nun an,
+sollte kein Lebewesen mehr in Finsternis leben.
+
+Und so brachen meine Eltern vom Fuße des Berges auf, um das Licht hinaus in die
+Welt zu tragen.
 \end{document}
