set font for text

--- a/book.tex
+++ b/book.tex
@@ -1,9 +1,11 @@
-\documentclass[10pt,twoside,BCOR=12mm,DIV=classic]{scrbook}
+\documentclass[14pt,twoside,BCOR=12mm,DIV=classic]{scrbook}
 \usepackage[ngerman]{babel}
-\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
+\usepackage{tgchorus}
+\usepackage[T1]{fontenc}
 
 \begin{document}
+
 \title{Eine Sammlung von Schriften und Gebeten}
 \author{Bruder Maritius von Pratanberg\\Leitender Scriptor im Orden von Schwert und Kelch}
 \date{im Jahre des Herren 533}
